apps/status-page/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: status-page
  labels:
    app.kubernetes.io/name: status-page
    app.kubernetes.io/part-of: eehub-status-page
